--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">UHLTest</string>
+    <string name="app_name">UHL Sample</string>
     <string name="update_handler_library_sample">Update Handler Library Sample</string>
 </resources>
